--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
         <header class="main-header container">
             <nav class="main-nav">
 
+                <input type="checkbox" id="sidebar-active">
+
+                <label for="sidebar-active" class="open-sidebar-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+                </label>
+
+                <label id="overlay" for="sidebar-active"></label>
+                        
+                <div class="links-container">
+
+                <label for="sidebar-active" class="close-sidebar-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+                </label>
+
                  <a href="index.html" class="logo">
                     <img src="./assets/images/hero-logo.png" alt="skoti logo">
                 </a>
@@ -44,12 +58,10 @@
                     </li>
                 </ul>
 
+                </div>
+
                 <div class="nav-item-right">
                     <a href="#" class="btn btn-small btn-light btn-login">Masuk</a>
-                    <span class="mobile-toggle">
-                        <i class="bx bx-menu btn-open"></i>
-                        <i class="bx bx-x btn-close"></i>
-                    </span>
                 </div>
             </nav>
         </header>
@@ -115,7 +127,7 @@
     <div class="row container">
         <div class="text-group">
             <h2 class="text secondary-title">SEMUA ORANG BERHAK SEKOLAH TINGGI, <br>TERMASUK KAMU!</h2>
-            <p>Yuk, jangan biarin halangan dan rintangan ngehentiin langkahmu menuju cita-cita. Skoti bakal temenin kamu sampai semua impianmu jadi kenyataan! 🚀💪</p>
+            <p>Yuk, jangan biarin halangan dan rintangan ngehentiin langkahmu menuju cita-citamu. Skoti bakal temenin kamu sampai semua impianmu jadi kenyataan! 🚀💪</p>
         </div>
         <img src="./assets/images/bagian-4.svg" alt="#" class="grid-image">
     </div>        
