--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                     <li class="nav-item">
                         <a href="#" class="nav-link">Download</a>
                     </li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
                         <a href="#" class="nav-link">Beasiswa</a>
                     </li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
                         <a href="#" class="nav-link">Hangout</a>
                     </li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
                         <a href="#" class="nav-link">Courses</a>
                     </li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
                         <a href="#" class="nav-link">Support</a>
                     </li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
                         <a href="#" class="nav-link">About</a>
                     </li>
                 </ul>
